Refactoring of the Maven repo ZIP generation